# demo-index-exchange

./: .gitignore  pyproject.toml  readme.md  tailwind.config.js
app/: app.py
app/data/: recommendation-log.json
app/prompts/: alert-recommendation-v1.txt  log-bid-complete-v1.txt  log-bid-start-v1.txt  log-page-load-v1.txt  log-render-failure-v1.txt  log-render-start-v1.txt
app/static/css/: styles.css
app/static/js/: main.js
app/templates/: chain_details.html  index.html
